# land-cover-classfication

./: .gitattributes  .gitignore  Dataset_progress.py  constrast.py  full_model.pth  land-cover-classficationconfig1.json  land-cover-classficationconfig2.json  model.py  predict.py  train.py  trainer.py
land-cover-classfication/: CMakeLists.txt  README.md  config1.json  config2.json  dialog.cpp  dialog.h  dialog.ui  graphicdisplay.cpp  graphicdisplay.h  graphicdisplay.ui  land-cover-classfication.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pythoninvoker.cpp  pythoninvoker.h  qcombobox_tab.cpp  qcombobox_tab.h  qcombobox_tab.ui  res.qrc  tool.cpp  tool.h
